# AudienceRoom

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  openapi.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/core/: auth.py  config.py  firebase.py
backend/app/db/: session.py
backend/app/repositories/: ai_character_repository.py  feedback_metric_repository.py  practice_session_repository.py  session_feedback_repository.py  session_message_repository.py  session_participant_repository.py  user_repository.py
backend/app/schemas/: ai_character.py  conversation.py  feedback_metric.py  practice_session.py  user.py  (+3 more)
backend/docs/: README.md
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_ai_character_repository.py  test_ai_character_service.py  test_ai_characters_api.py  test_api_enhancements.py  test_auth_api.py  test_conversation_streaming_api.py  test_feedback_metric_repository.py  test_feedback_metric_service.py  test_feedback_metrics_api.py  test_practice_session_repository.py  test_practice_session_service.py  test_practice_sessions_api.py  test_session_feedback_api.py  test_session_feedback_repository.py  test_session_feedback_service.py  test_session_message_repository.py  test_session_message_service.py  test_session_messages_api.py  test_session_participant_repository.py  test_session_participant_service.py  test_session_participants_api.py  test_user_repository.py  test_user_service.py  test_users_api.py
(+145 files in other folders)
